hard-gists/6993747/run.log
=== Docker Run Log for 6993747 ===
Started at: Mi 29. Okt 16:45:34 CET 2025

[2025-10-29 16:45:34] START: Running container for 6993747
[2025-10-29 16:45:34] SUCCESS: Container debde85e6b2ff3dd429f3c112f249366fe09d3ff6392b894724d422acf02d3aa started for 6993747
=== Container logs for 6993747 ===
  File "/snippet.py", line 24
    print "ItemID: %s" % item['itemId'].value
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6993747 ===
[2025-10-29 16:45:36] INFO: Container debde85e6b2ff3dd429f3c112f249366fe09d3ff6392b894724d422acf02d3aa has stopped
